cif/org.eclipse.escet.cif.tests/tests/checks/FuncNoSpecificIntUserDefFuncStatsCheckBreak.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:
 - Internal user-defined function has a 'break' statement:
   - In user-defined function "f":
     - break;
       ^
   - In user-defined function "g.f":
     - break;
       ^
